# min_cmake_with_gtest

./: CMakeLists.txt  Makefile  version.h.in
.cache/clangd/index/: main.cpp.5D7AF3691360AF5C.idx  main.cpp.C69D32C207ADAFE8.idx  super.cpp.25B2771B7C39484C.idx  super.cpp.4991B2380465D93D.idx  super.h.2BC3508CD8BBDB3D.idx  super.h.95684A9F013C897D.idx  test_run.cpp.9860AD218953558E.idx  test_run.cpp.A28914CEE099015A.idx
src/: main.cpp
src/super/: CMakeLists.txt  super.cpp  super.h
test/: CMakeLists.txt  test_run.cpp
